--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,7 @@ services:
       SA_PASSWORD: "<YourStrong!Passw0rd>"
     ports:
       - "1433:1433"
+    volumes:
+        - ./exampledb.bak:/var/backups/exampledb.bak
+        - ./entrypoint.sh:/bin/entrypoint.sh
+    command: bash -c "chmod +x /bin/entrypoint.sh && /bin/entrypoint.sh"
